--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aura Salon - Elevate Your Style</title>
+    <title>Orra Salon - Elevate Your Style</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="index.html" class="logo">Aura Salon</a>
+                <a href="index.html" class="logo">Orra Salon</a>
                 <div class="nav-links" id="navLinks">
                     <a href="#" class="nav-link">Home</a>
                     <a href="#about" class="nav-link">About</a>
@@ -45,7 +45,7 @@
         <div class="curved-line cl-4"></div>
         
         <div class="hero-content">
-            <h1 class="hero-title">Aura Salon</h1>
+            <h1 class="hero-title">Orra Salon</h1>
             <p class="hero-subtitle">Elevate Your Style</p>
             <div class="book-now-container">
                 <a href="#booking" class="book-now-btn">Book Now</a>
