--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orra Salon - Elevate Your Style</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -79,14 +79,14 @@
         <div class="container">
             <div class="about-wrapper">
                 <div class="about-image">
-                    <img src="https://via.placeholder.com/600x800" alt="Aura Salon Interior">
+                    <img src="https://via.placeholder.com/600x800" alt="Orra Salon Interior">
                     <div class="about-accent"></div>
                 </div>
                 <div class="about-content">
-                    <h2 class="section-title">About Aura</h2>
-                    <p>Welcome to Aura, where style meets sophistication. Established with a passion for beauty and excellence, our salon is dedicated to providing premium services that enhance your natural beauty and elevate your style.</p>
+                    <h2 class="section-title">About Orra</h2>
+                    <p>Welcome to Orra, where style meets sophistication. Established with a passion for beauty and excellence, our salon is dedicated to providing premium services that enhance your natural beauty and elevate your style.</p>
                     <p>Our team of skilled professionals combines artistic vision with technical expertise to deliver personalized experiences tailored to your unique needs and preferences.</p>
-                    <p>At Aura, we believe that beauty is an expression of individuality. Our mission is to help you discover and embrace your personal style while providing a luxurious and rejuvenating experience in an elegant and welcoming environment.</p>
+                    <p>At Orra, we believe that beauty is an expression of individuality. Our mission is to help you discover and embrace your personal style while providing a luxurious and rejuvenating experience in an elegant and welcoming environment.</p>
                 </div>
             </div>
         </div>
@@ -471,7 +471,7 @@
                         <label for="message">Message (Optional)</label>
                         <textarea id="message" name="message" rows="4"></textarea>
                     </div>
-                    <button type="submit" class="submit-btn">Book Appointment</button>
+                    <button type="submit" class="submit-btn">Submit</button>
                 </form>
                 <div id="bookingConfirmation" class="booking-confirmation">
                     <h3>Thank You!</h3>
@@ -574,7 +574,7 @@
                         </div>
                         <div class="contact-text">
                             <h3>Email</h3>
-                            <p>info@aurasalon.com</p>
+                            <p>info@orrasalon.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -592,7 +592,7 @@
                     </div>
                 </div>
                 <div class="contact-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.7426211279!2d77.25399387559936!3d28.54483088946063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3d0e1e25c3b%3A0x8f3c1b17d6be7f0!2sE%20Block%2C%20Kalkaji%2C%20New%20Delhi%2C%20Delhi%20110019!5e0!3m2!1sen!2sin!4v1682956753975!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Aura Salon Location"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.7426211279!2d77.25399387559936!3d28.54483088946063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3d0e1e25c3b%3A0x8f3c1b17d6be7f0!2sE%20Block%2C%20Kalkaji%2C%20New%20Delhi%2C%20Delhi%20110019!5e0!3m2!1sen!2sin!4v1682956753975!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Orra Salon Location"></iframe>
                 </div>
             </div>
         </div>
@@ -603,7 +603,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-copyright">
-                    <p>&copy; <span id="currentYear"></span> Aura Salon. All rights reserved.</p>
+                    <p>&copy; <span id="currentYear"></span> Orra Salon. All rights reserved.</p>
                 </div>
                 <div class="footer-social">
                     <a href="#" class="social-link" aria-label="Facebook">
