--- a/gallery.html
+++ b/gallery.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Aura Salon</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Gallery - Orra Salon</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/  href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -16,7 +17,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="index.html" class="logo">Aura Salon</a>
+                <a href="index.html" class="logo">Orra Salon</a>
                 <div class="nav-links" id="navLinks">
                     <a href="index.html" class="nav-link">Home</a>
                     <a href="index.html#about" class="nav-link">About</a>
@@ -174,7 +175,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-copyright">
-                    <p>&copy; <span id="currentYear"></span> Aura Salon. All rights reserved.</p>
+                    <p>&copy; <span id="currentYear"></span> Orra Salon. All rights reserved.</p>
                 </div>
                 <div class="footer-social">
                     <a href="#" class="social-link" aria-label="Facebook">
